Add a dr-drafts checkout.

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -101,7 +101,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Set up git client"
+        "## Set up git clients"
       ],
       "metadata": {
         "id": "7cAPsvOTUUKh"
@@ -116,6 +116,9 @@
         "  %cd $piggyatbaqaqi\n",
         "  !git clone https://github.com/piggyatbaqaqi/skol.git\n",
         "sys.path.insert(0, piggyatbaqaqi / 'skol')\n",
+        "if not os.path.exists(piggyatbaqaqi / 'dr-drfts-mycosearch'):\n",
+        "  %cd $piggyatbaqaqi\n",
+        "  !git clone https://github.com/piggyatbaqaqi/dr-drafts-mycosearch.git\n",
         "workdir = skol / 'IST691'\n",
         "%cd $workdir"
       ],
@@ -252,7 +255,7 @@
       "metadata": {
         "id": "BIoHo7jTRMwG"
       },
-      "execution_count": 20,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -432,11 +435,11 @@
         "print(f'len(relabeled): {len(relabeled)}')"
       ],
       "metadata": {
-        "id": "rZo29oZ-fpcs",
-        "outputId": "5ce9e044-e2a0-4fdd-8687-beab95d97479",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rZo29oZ-fpcs",
+        "outputId": "5ce9e044-e2a0-4fdd-8687-beab95d97479"
       },
       "execution_count": 41,
       "outputs": [
@@ -483,12 +486,12 @@
         "df.groupby('label', observed=True).nunique()"
       ],
       "metadata": {
-        "id": "sE7cRbJ-g2eA",
-        "outputId": "a0d8d7d3-85db-4b38-dfcb-b5f044c8c969",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "sE7cRbJ-g2eA",
+        "outputId": "a0d8d7d3-85db-4b38-dfcb-b5f044c8c969"
       },
       "execution_count": 44,
       "outputs": [
@@ -797,6 +800,18 @@
           "execution_count": 44
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for tax in group_paragraphs(relabeled):\n",
+        "  print(f'We would send {tax.}')"
+      ],
+      "metadata": {
+        "id": "UHO9EXYTiLD9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
