OK, all the infrastructure for reading annotated files is done.

--- a/IST691/workspace.ipynb
+++ b/IST691/workspace.ipynb
@@ -804,14 +804,262 @@
     {
       "cell_type": "code",
       "source": [
-        "for tax in group_paragraphs(relabeled):\n",
-        "  print(f'We would send {tax.}')"
+        "grouped = group_paragraphs(relabeled)\n",
+        "for i, tax in enumerate(grouped):\n",
+        "  if i > 10:\n",
+        "    break\n",
+        "  print(f'Send to LLM:\\n\\n{tax.as_row()[\"description\"]}')"
       ],
       "metadata": {
-        "id": "UHO9EXYTiLD9"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UHO9EXYTiLD9",
+        "outputId": "84f93b6d-7fe4-4b4e-e17d-84ffabcdde48"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Send to LLM:\n",
+            "\n",
+            "Maculae hypogenae, atro-brunneae vel nigrae. Coloniae hypophyllae, eﬀusae. Mycelium\n",
+            "internum. Stromata parva. Conidiophora macronematosa, ex hyphis oriunda singulata vel\n",
+            "2–6-fasciculata, simplicia, erecta vel procumbentia, recta vel ﬂexuosa, geniculata, laevia,\n",
+            "crassitunicata, pallide brunnea vel atro-brunnea, 2–7-septata, 22–105 × 3–6 µm. Cellulae\n",
+            "conidiogenae integratae, terminales vel intercalares, polyblasticae, cicatricatae, cicatrices\n",
+            "incrassatae. Conidia simplicia, sicca, acropleurogena, solitaria, cylindricata, 3–11-septata,\n",
+            "recta vel leniter curvata, olivacea vel olivaceo-brunnea, laevia, tenui-tunicata, apices\n",
+            "obtusae, ad basim obconicotruncata, hila incrassata, 35–82 × 2–6 µm, hila 1.5–2.5 µm\n",
+            "lata.\n",
+            "\n",
+            "Infection spots hypogenous, minute, dark brown to black. Colonies\n",
+            "hyphophyllous, eﬀuse. Mycelium internal. Stromata absent or poorly developed.\n",
+            "Conidiophores macronematous, arising singly from internal hyphae or in a\n",
+            "fascicle of 2–6 from poorly developed stromata, simple, erect to procumbent,\n",
+            "straight to ﬂexuous, geniculate, smooth, thick-walled, light to dark brown,\n",
+            "2–7-septate, 22–105 × 3–6 µm. Conidiogenous cells integrated, terminal,\n",
+            "becoming intercalary, polyblastic, cicatrized with thickened conidial scars.\n",
+            "Conidia simple, dry, acropleurogenous, solitary, cylindrical, 3–11-septate,\n",
+            "straight to slightly curved, olivaceous to olivaceous-brown, smooth, thinwalled, apex obtuse, base obconico-truncate, hila thickened, 35–82 µm long\n",
+            "and 2–6 µm thick, germinating conidia present, hila 1.5–2.5 µm wide.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Maculae amphigenae, primo discretae, venulis deﬁnitae, demum coalescentes, irregulares\n",
+            "et plus minusve, nigrae vel brunneae, 1–21 mm in diam. Coloniae hypophyllae,\n",
+            "eﬀusae, brunneae. Mycelium internum. Stromata subepidermalia vel erumpentia,\n",
+            "pseudoparenchymatica, 17–21 × 36–42 µm. Conidiophora ex hyphis oriunda singulata\n",
+            "vel 2–50-fasciculata, macronematosa, simplicia, cylindricata, erecta vel procumbentia,\n",
+            "recta vel curvata, laevia, crassitunicata, ramosa, pallide brunnea, 1–2-septata, 10–70\n",
+            "× 2–5 µm. Cellulae conidiogenae integratae, terminales, monoblasticae, cicatrices non\n",
+            "incrassatae. Conidia simplicia, tenui-tunicata, sicca, acropleurogena, recta vel curvata,\n",
+            "non ramosa, cylindricata vel obclavata, 0–4-septata, apices subacuta vel acuta, ad basim\n",
+            "obconicotruncata vel rotundata, pallide brunnea, 20–58 × 2–3 µm, hila non incrassata,\n",
+            "1–1.5 µm lata.\n",
+            "\n",
+            "Infection spots amphigenous, discrete and vein-limited in the beginning but\n",
+            "coalescing to become irregular and more or less necrotic afterwards, black to\n",
+            "brown, 1–21 mm in diam. Colonies hypophyllous, eﬀuse, brown. Mycelium\n",
+            "internal. Stromata subepidermal to erumpent, pseudoparenchymatous, 17–21\n",
+            "× 36–42 µm. Conidiophores arising singly from internal hyphae or in a fascicle\n",
+            "of 2–50 from subepidermal or erumpent stromata, macronematous, simple,\n",
+            "erect to procumbent, cylindrical, smooth-walled, thick-walled, branched,\n",
+            "light brown, 1–2-septate, 10–70 × 2–5 µm. Conidiogenous cells integrated,\n",
+            "terminal, monoblastic, scars unthickened. Conidia simple, thin-walled, dry,\n",
+            "acropleurogenous, straight to curved, unbranched, cylindrical to obclavate,\n",
+            "0–4-septate, apex subacute to acute, base obconicotruncate to rounded, light\n",
+            "brown, 20–58 × 2–3 µm, hila unthickened, 1–1.5 µm wide.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Emended description: Spores form terminally on or intercalary in hyphae\n",
+            "or within the necks of sporiferous saccules in soil (or sometimes roots) singly\n",
+            "or (when glomoid) also in spore clusters or multi-spored loose to compact\n",
+            "sporocarps; when in compact sporocarps (with or without peridium), spores\n",
+            "randomly distributed or organized around a central hyphal plexus. Glomoid\n",
+            "spores with one single or multiple-layered wall. Entrophosporoid spores with\n",
+            "two walls: outer structural wall and inner (germinal) wall. In glomoid spores,\n",
+            "wall of the subtending hyphae (sh) conspicuously continuous with the spore\n",
+            "wall, sh funnel-shaped, cylindrical, or constricted and concolorous with\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Emended description: Spore formation is of glomoid or entrophosporoid\n",
+            "type. Glomoid spores form in soil or (rarely) in roots singly, in clusters with\n",
+            "few spores, or (extremely rarely) in sporocarps; sh hyaline to white, rarely\n",
+            "subhyaline, often conspicuously funnel- or bill-shaped. Spores with one wall\n",
+            "of 1–4 layers; spore base pore closure often with a septum that arises from the\n",
+            "structural layer, an adherent thin inner layer, or both layers. Entrophosporoid\n",
+            "spores form singly in soils or rarely in roots, subterminally or intercalary within\n",
+            "the neck of a tightly attached sporiferous saccule that generally is larger in size\n",
+            "than the underlying spore; they have two walls: outer and inner. Outer, hyaline,\n",
+            "semi-persistent to evanescent layers of the outer spore wall are the hyphal neck\n",
+            "and sporiferous saccule wall layers. The pigmented structural layer does not\n",
+            "continue within the hyphal wall but only within the saccule terminus for some\n",
+            "distance. Pore closed by a plug towards the saccule. The inner wall is generally\n",
+            "thick, ﬁnely laminated and forms de novo. No inner wall layer has a beaded\n",
+            "appearance or stains in Melzer’s reagent. Fungal structures in roots stain blue\n",
+            "with trypan blue; forming vesicular-arbuscular mycorrhizae.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Sporae singulariter eﬀormatae; tunica sporarum cum tunica hypharum coniuncta; hyphae\n",
+            "albae, tunica hyphae 1.2–2.0 maior ad basem sporarum quam in 10-20 µm distantia\n",
+            "basae sporarum; porum sporarum occlusum septa tunicae sporarum, rarum apertum.\n",
+            "Mycorrhizas vesiculares-arbusculares formans caeruleas colorantes cum ‘trypan blue’.\n",
+            "\n",
+            "Key characters: Spores formed generally singly in soil or rarely in roots;\n",
+            "sh white, rarely subhyaline, 1.2–2.0 times wider at spore base than their width\n",
+            "10–20 µm distance from the spore, giving a slightly funnel-shaped or cylindrical\n",
+            "appearance. Spores with one wall of 1–4 layers; spore base pore closure often\n",
+            "with a septum that may arise from the structural layer, an adherent innermost,\n",
+            "(semi-)ﬂexible layer, or both innermost layers.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Emended description: Spore formation diversisporoid, otosporoid, or\n",
+            "entrophosporoid sensu lato (‘tricisporoid’ sensu stricto). Diversisporoid spores\n",
+            "formed singly, in clusters, or in large disorganized sporocarps with high spore\n",
+            "numbers. In pigmented spores, subtending hyphae (sh) conspicuously change\n",
+            "color, becoming hyaline to white behind the septum, (immediately or at a very\n",
+            "short distance from this septum); sh generally straight, cylindrical, in some\n",
+            "species constricted or inﬂated. Spores with 1–3 wall layers; pore often closed\n",
+            "with a septum that may arise from innermost wall lamina, an overlaying\n",
+            "laminate layer, or from both; sh pore rarely open. Otosporoid and tricisporoid\n",
+            "spores with two multiple-layered walls; otosporoid spores formed laterally on\n",
+            "the persistent neck of a terminal or intercalary sporiferous saccule at some\n",
+            "distance from the saccule terminus; spore pore generally closed by a septum at\n",
+            "spore base. Tricisporoid spores formed within the evanescent neck of a tightly\n",
+            "attached terminal or intercalary sporiferous saccule, closely attached to the\n",
+            "saccule terminus which is often smaller in size than the mature spores attached,\n",
+            "rarely equal in size; tricisporoid spores with two cicatrices formed by the outer\n",
+            "wall pigmented structural layer.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Sporocarpia ignota. Sporae singulatim eﬀormatae subterminaliter vel intercalariter in\n",
+            "hypha inﬂata anguste adiacetum ad sacculum sporiferum terminalem vel intercalarem.\n",
+            "Sacculus sporiferus frequenter minor quam sporae globosae vel subglobosae; sporae duabus\n",
+            "tunicis stratis pluribus. Stratum exterior tunicae exterioris coniunctum tunica hyphae et\n",
+            "sacculi. Stratum interiorem tunicae exterioris laminatum, duas poras sporae occludens.\n",
+            "Stratum exterior tunicae interioris non granulatum. Formans mycorrhizas vesiculararbusculares. Structurae fungorum colorantes caeruleae cum ‘trypan blue’.\n",
+            "\n",
+            "Key characters: Sporocarps unknown. Spores formed within the hyphal\n",
+            "neck of closely adherent terminal or intercalary sporiferous saccules. The\n",
+            "globose saccule terminus generally is substantially smaller than the attached\n",
+            "mature spore. Spores have an outer and an inner wall. At least two layers\n",
+            "(including the outer wall structural layer) are continuous with the sporiferous\n",
+            "saccule wall. The outer layer of the outer wall is evanescent, the inner layers are\n",
+            "permanent. After the hyphal neck connections break oﬀ, spores show two, often\n",
+            "opposite, cicatrices that are closed by the permanent sublayers of the outer wall\n",
+            "structural layer. The inner wall forms de novo, consists of several layers without\n",
+            "granular (‘beaded’) appearance and does not stain with Melzer’s reagent. The\n",
+            "fungal structures in the roots stain blue to dark blue with trypan blue; forming\n",
+            "vesicular-arbuscular mycorrhiza.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Sporae singulatim eﬀormatae in hypha inﬂata anguste adiacetum ad sacculum sporiferum\n",
+            "terminalem vel intercalarem. Sporae tribus tunicis stratis pluribus. Stratum interiorem\n",
+            "tunicae exterioris laminatum, duas poras sporae occludens. Stratum exterior tunicae\n",
+            "interioris non granulatum.\n",
+            "\n",
+            "Key characters: Sporocarps unknown. Spores formed within the hyphal neck\n",
+            "of closely adherent terminal or intercalary sporiferous saccules. Spores have\n",
+            "three walls: outer, middle and inner. At least two layers (including the outer\n",
+            "wall structural layer) are continuous with the sporiferous saccule wall. After the\n",
+            "\n",
+            "hyphal neck connections break oﬀ, spores show two, often opposite, cicatrices\n",
+            "that are closed by the permanent sublayers of the outer wall structural layer.\n",
+            "Middle and inner wall form de novo. Middle wall is 1–2-layered. Inner wall\n",
+            "consists of several layers, none of which has a granular (‘beaded’) appearance,\n",
+            "and does not stain in Melzer’s reagent.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Sporocarpia ignota. Sporae singulatim eﬀormatae subterminaliter vel intercalariter in hypha\n",
+            "inﬂata anguste adiacetum ad sacculum sporiferum terminalem vel intercalarem. Sporae\n",
+            "globosae vel subglobosae, tribus tunicis stratis pluribus. Stratum exterior tunicae exterioris\n",
+            "coniunctum tunica hyphae et sacculi. Stratum interiorem tunicae exterioris laminatum,\n",
+            "duas poras sporae occludens. Stratum exterior tunicae interioris non granulatum.\n",
+            "\n",
+            "Key characters: Sporocarps unknown. Spores formed within the hyphal neck\n",
+            "of closely adherent, terminal or intercalary sporiferous saccules. Spores have\n",
+            "three walls: outer, middle and inner. At least two layers (including the outer\n",
+            "wall structural layer) are continuous with the sporiferous saccule wall. Inner\n",
+            "layers of the outer spore wall are permanent. After the hyphal neck connections\n",
+            "break oﬀ, spores show two, often opposite, cicatrices that are closed by the\n",
+            "permanent sublayers of the outer wall structural layer. Middle and inner wall\n",
+            "form de novo. Middle wall is 1–2-layered. Inner wall consists of several layers,\n",
+            "none of which have a granular (‘beaded’) appearance (Fig. 18–19), and does\n",
+            "not stain in Melzer’s reagent. The inner wall may be germinal in function, but a\n",
+            "germination structure has not yet been found.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Carpophorum annuum, resupinatum. Facies pororum cremeum vel bubalinum; pori\n",
+            "angulati, 5–6 per mm. Systema hypharum dimiticum, hyphae generatoriae ﬁbulatae,\n",
+            "hyphae skeletales subiculi 2–4 µm diam. Sporae hyalinae, ellipsoideae, 2.7–3 × 1.9–2.2\n",
+            "µm.\n",
+            "\n",
+            "Fruitbody — Basidiocarps annual, resupinate, coriaceous, without special\n",
+            "odor or taste when fresh, corky when dry, up to 15 cm long, 1 cm wide and\n",
+            "1 mm thick; sterile margin thinning out, membranous, cream, up to 3 mm\n",
+            "wide. Pore surface cream to pale buﬀ-yellow upon drying; pores angular, 5–6\n",
+            "per mm, dissepiments thin, slightly lacerate. Subiculum very thin to almost\n",
+            "lacking, cream to pale buﬀ, ca. 0.1 mm thick. Tubes concolorous with pore\n",
+            "surface, corky, ca. 0.4 mm long.\n",
+            "\n",
+            "Hyphal structure — Hyphal system dimitic; generative hyphae bearing\n",
+            "clamp connections, skeletal hyphae IKI–, CB+; tissue unchanged in KOH.\n",
+            "\n",
+            "Subiculum — Dominated by skeletal hyphae; generative hyphae hyaline,\n",
+            "thin-walled, occasionally branched, 1.8–3.5 µm diam; skeletal hyphae hyaline,\n",
+            "thick-walled with a distinct lumen to subsolid, straight to ﬂexuous, occasionally\n",
+            "branched, interwoven, 2–4 µm diam.\n",
+            "\n",
+            "Tubes — Generative hyphae infrequent, hyaline, thin-walled, occasionally\n",
+            "branched, 1.5–2.5 μm diam; skeletal hyphae dominant, hyaline, thick-walled\n",
+            "with a distinct lumen to subsolid, occasionally branched, interwoven, 1.8–2.8\n",
+            "\n",
+            "μm diam. Skeletocystidia numerous, clavate, thick-walled, originated from\n",
+            "trama, embedded or projecting, heavily encrusted, 15–50 × 6–11 µm (with\n",
+            "encrustation); basidia clavate, bearing four sterigmata and a clamp connection\n",
+            "at the base, 9–12 × 4–5 μm; basidioles in shape similar to basidia, but slightly\n",
+            "smaller.\n",
+            "\n",
+            "Spores — Basidiospores small, ellipsoid, hyaline, thin-walled, smooth,\n",
+            "IKI–, CB–, (2.5–)2.7–3 × (1.8–)1.9–2.2(–2.3) μm, L = 2.85 μm, W = 2.04 μm,\n",
+            "Q = 1.38–1.41 (n=60/2).\n",
+            "\n",
+            "Type of rot — White rot.\n",
+            "\n",
+            "Send to LLM:\n",
+            "\n",
+            "Cellulae conidiogenae primo monoblasticae, deinde polyblasticae, indeterminatae,\n",
+            "cum, cicatricibus primo apicalibus, deinde lateralibus, discoidibus, protuberantibus,\n",
+            "nigris, incrassatis. Conidia alveariformia, muriformia, distoseptata, cum appendicibus\n",
+            "cellularibus, praedita.\n",
+            "\n",
+            "Anamorphic fungi. Colonies on the natural substrate eﬀuse, hairy, brown,\n",
+            "olivaceous or black. Mycelium partly superﬁcial and immersed. Conidiophores\n",
+            "distinct, single, unbranched, septate, brown or olivaceous, smooth. Conidiogenous\n",
+            "cells integrated, terminal, at ﬁrst with a single terminal conidiogenous locus,\n",
+            "then indeterminate, polyblastic, with successive sympodial but rectilinear\n",
+            "proliferation, rupturing the outer wall around each scar, resulting in a lateral\n",
+            "displacement of scars, leaving conspicuous circumferential annular fringes of\n",
+            "the torn wall. Conidiogenous loci evident, lenticular, protuberant, thickened\n",
+            "and black, conidial secession schizolytic. Conidia solitary, ellipsoidal, oval to\n",
+            "broadly navicular, dictyoseptate, distoseptate, verruculose or smooth, brown or\n",
+            "dark brown, conspicuously cicatrized at the base, with a cellular, cylindrical or\n",
+            "subulate, brown apical appendage.\n",
+            "\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
